--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<!-- refresh page every 30 seconds -->
+<!-- refresh page every 30 seconds 
+NOTE: app.js is using localStorage to maintain selected item/zone results between refreshes -->
 <meta http-equiv="refresh" content="30">
-<meta http-equiv="cache-control" content="max-age=0" />
-<meta http-equiv="cache-control" content="no-cache" />
-<meta http-equiv="expires" content="0" />
-<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-<meta http-equiv="pragma" content="no-cache" />
 <link rel="stylesheet" href="app-nav.css" type="text/css" media="all" />
 <title>Sys-Dash</title>
 <!--[if IE]>
@@ -57,7 +53,7 @@
     </div>
     <br/><br/>
   <footer>
-    <textarea id="detail-text-area" rows="10" style="width:100%"></textarea>
+    <textarea id="detail-text-area" rows="10" style="width:100%" readonly></textarea>
     <h4>Testing site for Sys-Dash</h4>
   </footer>
 </div>
