Remove N/A text in result cells and added .not-applicable class to element

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,9 @@ NOTE: app.js is using localStorage to maintain selected item/zone results betwee
         background-color:gray;
         color:gray;
     }
+    .not-applicable {
+        background-color:#cc;
+    }
 </style>
 </head>
 <body onload="javascript:init()">
