Comment out zones and funcitons tabs/navigation

--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,6 @@ NOTE: app.js is using localStorage to maintain selected item/zone results betwee
     .offline {
         background-color:brown;
     }
-    
 </style>
 </head>
 <body onload="javascript:init()">
@@ -51,15 +50,15 @@ NOTE: app.js is using localStorage to maintain selected item/zone results betwee
   <header><a href="">Sys-Dash</a></header>
   <nav id="main-nav">
     <ul>
-      <li><a id="nav-overview" role="button" >Overview</a></li>
-      <li><a id="nav-zones" role="button" >Zone Detail</a></li>
-      <li><a id="nav-functions" role="button" >Functional Detail</a></li>
+      <li><a id="nav-overview" role="button" >Sys-Dash</a></li>
+      <!--li><a id="nav-zones" role="button" >Zone Detail</a></li-->
+      <!--li><a id="nav-functions" role="button" >Functional Detail</a></li-->
     </ul>
   </nav>
   <div id="main">
-    <div id="overview" >Overview Content</div>
-    <div id="zones" >Zones Content</div>
-    <div id="functions" >Functions Content</div>
+    <div id="overview" >Sys-Dash</div>
+    <!--div id="zones" >Zones Content</div-->
+    <!--div id="functions" >Functions Content</div-->
     </div>
     <br/><br/>
   <footer>
@@ -69,6 +68,7 @@ NOTE: app.js is using localStorage to maintain selected item/zone results betwee
 </div>
 <script src="utils.js"></script>
 <script src="data/sys-data.js"></script>
+<script src="CollapsibleTables.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
